log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:39:39 PM UTC: 
 tests:  0|6
total_score: 0/70
d05428e
Thu 30 Mar 2023 03:46:51 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
2a6fb8e
Thu 30 Mar 2023 03:48:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a05b0ff
Thu 30 Mar 2023 03:49:57 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:49: error: expected expression before ‘)’ token
   17 |   lista->data=malloc(sizeof(lista->size * (void)));
      |                                                 ^
Compilation failed
4092853
Thu 30 Mar 2023 03:51:41 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
3e4972c
Thu 30 Mar 2023 04:01:46 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
07c194b
Thu 30 Mar 2023 04:29:15 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:17:26: error: ‘*lista.capacity’ is used uninitialized [-Werror=uninitialized]
   17 |   lista->capacity=2*lista->capacity;
      |                     ~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f7ef02d
Thu 30 Mar 2023 04:29:37 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:17:26: error: ‘*lista.capacity’ is used uninitialized [-Werror=uninitialized]
   17 |   lista->capacity=2*lista->capacity;
      |                     ~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b6a2252
Thu 30 Mar 2023 04:29:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
4fb4589
Thu 30 Mar 2023 04:31:11 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7aa9f63
Thu 30 Mar 2023 04:31:23 PM UTC: 
 arraylist.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:20: error: expected ‘;’ before ‘lista’
   16 |   lista->capacity=2
      |                    ^
      |                    ;
   17 |   lista->data=malloc(lista->capacity * sizeof(void));
      |   ~~~~~             
Compilation failed
4af931a
Thu 30 Mar 2023 04:31:26 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1c673b3
Thu 30 Mar 2023 04:37:19 PM UTC: 
 arraylist.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
2b91299
Thu 30 Mar 2023 04:37:54 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
aaf0432
Thu 30 Mar 2023 04:39:09 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9a81069
Thu 30 Mar 2023 04:39:22 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
a43bcf1
Thu 30 Mar 2023 04:49:21 PM UTC: 
 arraylist.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:36:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   36 |   void *aux;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
b63f697
Thu 30 Mar 2023 04:49:28 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 20/70
667fabd
Thu 30 Mar 2023 04:49:46 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 30/70
bff5bd0
Thu 30 Mar 2023 04:58:53 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
43c29c2
Thu 30 Mar 2023 05:01:13 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dc54926
Thu 30 Mar 2023 05:02:03 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:52:25: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   52 |   if(i<0) return l->size-i;
      |                  ~~~~~~~^~
cc1: all warnings being treated as errors
Compilation failed
27a7e22
Thu 30 Mar 2023 05:02:17 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d998ef2
Thu 30 Mar 2023 05:04:10 PM UTC: 
 arraylist.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
46311ac
Thu 30 Mar 2023 05:05:42 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
d5dca46
Thu 30 Mar 2023 05:09:21 PM UTC: 
 arraylist.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  8|2
total_score: 40/70
c35c19f
Thu 30 Mar 2023 05:11:15 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  8|2
total_score: 40/70
211bd82
Thu 30 Mar 2023 05:11:40 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
6fa8a3d
Thu 30 Mar 2023 05:12:30 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
11c263f
Thu 30 Mar 2023 05:12:50 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 40/70
9d3946b
Thu 30 Mar 2023 05:13:52 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 50/70
19d1da4
Thu 30 Mar 2023 05:14:07 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 50/70
ca3ca60
Thu 30 Mar 2023 05:18:09 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
04f3e24
Thu 30 Mar 2023 05:20:46 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
e3927b8
Thu 30 Mar 2023 05:23:54 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
01204ab
Thu 30 Mar 2023 05:25:51 PM UTC: 
 arraylist.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  11|1
total_score: 50/70
229186a
Thu 30 Mar 2023 05:26:19 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 50/70
d42267f
Thu 30 Mar 2023 05:26:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f480a54
Thu 30 Mar 2023 05:27:20 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 50/70
10b8b24
Thu 30 Mar 2023 05:27:31 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|1
total_score: 50/70
8ab0c19
Thu 30 Mar 2023 05:29:01 PM UTC: 
 arraylist.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
6dad5a5
Thu 30 Mar 2023 05:30:11 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 50/70
d07e044
Thu 30 Mar 2023 05:30:26 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 50/70
8b5f8e0
Thu 30 Mar 2023 05:32:42 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cd59342
